fixed overflow in project container

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -161,6 +161,7 @@ a {
           justify-content: center;
           align-items: center;
           opacity: 0;
+          overflow: hidden;
 
           .project-title {
             font-size: 2.8rem;
